--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "release": "bumpp --commit --push --tag && npm publish",
     "lint": "eslint --ext=js,ts,jsx,tsx .",
     "lint:fix": "eslint --ext=js,ts,jsx,tsx . --fix",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@loadable/component": "^5.15.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.3",
     "@types/loadable__component": "^5.13.4",
