--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "release": "bumpp --commit --push --tag && npm publish",
     "lint": "eslint --ext=js,ts,jsx,tsx .",
     "lint:fix": "eslint --ext=js,ts,jsx,tsx . --fix",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "prettier --write --ignore-unknown"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -42,10 +46,16 @@
     "@types/loadable__component": "^5.13.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "bumpp": "^8.2.1",
     "esbuild": "^0.15.9",
+    "eslint": "^8.24.0",
+    "husky": "^8.0.1",
     "jest": "^29.1.1",
     "jest-environment-jsdom": "^29.1.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^6.2.3",
